--- a/src/components/Rules/Rules.css
+++ b/src/components/Rules/Rules.css
@@ -35,7 +35,7 @@
   .modal-wrapper {
     z-index: 1000;
     width: 100vw;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     position: fixed;
     top: 0;
     left: 0;
@@ -108,7 +108,7 @@
     .modal-wrapper {
       .rules-modal {
         width: 100vw;
-        height: 100vh;
+        height: calc(var(--vh, 1vh) * 100);
         border-radius: 0px;
         padding: 95px 0 65.91px 0;
         gap: 113;
